# mind-palace

./: .env.example  .env.test  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  package.json  pyproject.toml  requirements.txt  tmp.py
.github/workflows/: release-please.yaml  tests.yaml
addons/: addons.go
cli/cmd/: add.go  addons.go  migrate.go  root.go  search.go  user.go
cli/common/: errors.go  file.go
config/: config.go  info.go  user.go
constants/: constants.go
migrations/: 20240519124436_init_tables.down.sql  20240519124436_init_tables.up.sql  20240520053426_remove_default_uuid_from_resource.down.sql  20240520053426_remove_default_uuid_from_resource.up.sql  20240525062848_rename_table_original.down.sql  20240525062848_rename_table_original.up.sql  20240525070408_create_summary_table.down.sql  20240525070408_create_summary_table.up.sql  20240525070755_create_tag_table.down.sql  20240525070755_create_tag_table.up.sql  20240610131253_rename_tag_table_to_keyword.down.sql  20240610131253_rename_tag_table_to_keyword.up.sql  20240812142237_create_chunk_and_chunk_keyword_tables.down.sql  20240812142237_create_chunk_and_chunk_keyword_tables.up.sql
models/: memory.go  resource.go
pkg/addons/: addons.go  common.go  default.go  example.py  keywords.go  summary.go
pkg/api/: add.go  api_test.go  e2e_test.go  search.go  search_test.go
pkg/common/: config.go  constants.go  file.go  file_test.go  info.go  (+2 more)
proto/: Log.proto  Palace.proto  SharedTypes.proto  VDB.proto
scripts/: cover.sh  env.sh  pb-compiler-py.sh  pb-compiler.sh  postgres.sh  pyreq.sh  standalone_embed.sh
(+120 files in other folders)
