[tool.poetry]
name = "mindpalace"
version = "0.1.0"
description = ""
authors = ["Lasha Jini <lasha.jini@gmail.com>"]
readme = "README.md"
packages = [{include = "pkg"}]

[tool.poetry.dependencies]
python = "^3.9"
llama-index = "^0.10.43"
python-dotenv = "^1.0.1"
grpcio = "1.63.0"
grpcio-tools = ">=1.63"
llama-index-embeddings-huggingface = "^0.2.1"
pytest = "^8.2.2"
pymilvus = "^2.4.3"
protobuf = "^5.27.1"
llama-cpp-python = "^0.2.77"
llama-index-llms-llama-cpp = "^0.1.3"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore=_milvus -v"
testpaths = [
  "pkg"
]
